fixed collapse

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,9 +22,10 @@
   -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
   -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
   transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  pointer-events : none;
+  pointer-events : auto;
   width: 100%;
-  padding-left: 80px; 
+  padding-left: 80px;
+  overflow: hidden; 
 }
 
 @media only screen and (max-width: 500px) {
